fix(waiting.html): Fix the error that overlap footer on iframe

--- a/css/waiting.css
+++ b/css/waiting.css
@@ -1,8 +1,8 @@
 .google-form-container {
     position: relative;
-    height: 0;
+    /*height: 0;*/
     overflow: hidden;
-    padding-bottom: 39%;
+    padding-bottom: 10px;
 }
 
 .google-form-container iframe{
@@ -11,11 +11,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-@media only screen and (max-width: 600px) and (min-width: 480px) {
-    .google-form-container {
-        height: 780px;
-    }
+    overflow: hidden;
 }
 
